Fixed little bug with select fields icons overlapping with text

--- a/src/components/TranslatorInput/TranslatorInput.css
+++ b/src/components/TranslatorInput/TranslatorInput.css
@@ -24,6 +24,10 @@
 	color: black;
 }
 
+.select-field {
+	min-width: 155px !important;
+}
+
 @media only screen and (max-width: 992px) {
 	.translate-options {
 		float: left !important;
